# CMakeList.txt : CMake project for dypp_array_gen, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.12)

# Add source to this project's executable.
add_executable (dypp_array_gen "dypp_array_gen.cpp" "dypp_array_gen.h")

# TODO: Add tests and install targets if needed.
