# CMakeList.txt : CMake project for text_array_gen, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.12)

# Add source to this project's executable.
add_executable (text_array_gen "text_array_gen.cpp" "text_array_gen.h")

# TODO: Add tests and install targets if needed.
